--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Feng Han"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "Rutgers University"
-  location         : "Piscataway, New Jersey, USA"
+  location         : "New Jersey, USA"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
