--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   - title: "Teaching Experience"
     url: "/#teaching-experience"
     
-  - title: "Honors and Awards"
-    url: "/#honors-and-awards"
+  - title: "Awards"
+    url: "/#awards"
 
   - title: "Projects"
     url: "/#projects"  
